RESOLVED FIXED237119
Fix !ENABLE(SERVICE_WORKER) build after r290387
https://bugs.webkit.org/show_bug.cgi?id=237119
Summary Fix !ENABLE(SERVICE_WORKER) build after r290387
Don Olmstead
Reported 2022-02-23 15:55:53 PST
Forgot a guard for this
Attachments
Patch (1.73 KB, patch)
2022-02-23 16:01 PST, Don Olmstead
no flags
Don Olmstead
Comment 1 2022-02-23 16:01:45 PST
Chris Dumez
Comment 2 2022-02-23 16:08:01 PST
Comment on attachment 453042 [details] Patch Thanks for fixing!
EWS
Comment 3 2022-02-23 17:44:28 PST
Committed r290407 (247717@main): <https://commits.webkit.org/247717@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 453042 [details].
Radar WebKit Bug Importer
Comment 4 2022-02-23 17:45:22 PST
Note You need to log in before you can comment on or make changes to this bug.