Fix !ENABLE(SERVICE_WORKER) build after r290387 https://bugs.webkit.org/show_bug.cgi?id=237119

Unreviewed build fix.


* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::establishRemoteWorkerContextConnectionToNetworkProcess):



Canonical link: https://commits.webkit.org/247717@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290407 268f45cc-cd09-0410-ab3c-d52691b4dbfc